# PrntBtlr

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cut-release.yml  promote.yml  release.yml
app/: __init__.py  auth.py  config.py  main.py  templating.py
app/routes/: auth.py  dashboard.py  printers.py  scans.py  system_routes.py
app/services/: __init__.py  cups.py  health.py  repair.py  scan.py  shell.py  system.py  updater.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  dashboard.html  login.html  printer_add.html  printers.html  scans.html  system.html
app/templates/partials/: health.html  jobs.html  services.html
config/: scanbd-action.conf  scanbd-pixma.conf
deploy/: Dockerfile  docker-compose.yml  prntbtlr-scan-listen.service  prntbtlr.service
docs/: monitoring.md
scripts/: bootstrap.sh  install.sh  scan-listen.py  scan2pdf-ocr.sh  scan2pdf.sh  uninstall.sh  update.sh
tests/: test_auth.py  test_cups.py  test_health.py  test_repair.py  test_scan.py  test_updater.py  test_web.py
