[project]
name = "prntbtlr"
version = "0.1.0"
description = "PrntBtlr — a web server for Raspberry Pi that turns an old USB printer into a managed AirPrint + button-scan station with a friendly control panel."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2",
]

[project.scripts]
prntbtlr = "app.main:run"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, flake8-bugbear, comprehensions
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]  # line length is enforced by the formatter, not the linter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
